manual\ru\introduction
preFinalCommit

--- a/manual/ru/introduction/Creating-Desktop-Apps.html
+++ b/manual/ru/introduction/Creating-Desktop-Apps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Creating Desktop Applications with Electron - Soft8Soft</title>
+    <title>Создание компьютерных приложений с использованием Electron - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to use Electron to create cross-platform Verge3D applications for desktop."/>
     <base href="../../../" />
@@ -12,10 +12,10 @@
   </head>
   <body><article>
 
-    <h1>Creating Desktop Applications with Electron</h1>
+    <h1>Создание Компьютерных Приложений с Использованием Electron</h1>
 
     <p>
-      Electron is a tool which converts web applications to cross-platform desktop applications. Electron can create apps for Windows, macOS (both Intel and Apple Silicon architectures supported), and Linux. The tool is completely free, easy-to-use and allows for advanced customizations with JavaScript (if you need it).
+      Electron - это инструмент для преобразования веб-приложений в кросс-платформенные десктопные приложения. Electron может создавать приложения для Windows, macOS (поддерживаются архитектуры Intel и Apple Silicon) и Linux. Инструмент полностью бесплатен, прост в использовании и позволяет выполнять расширенную настройку с помощью JavaScript (если вам это необходимо).
     </p>
 
     [contents]
@@ -23,102 +23,101 @@
 
     [anchor:creating_app]
 
-    <h2>Creating Application</h2>
+    <h2>Создание Приложения</h2>
 
     <p>
-      Electron can be installed via NPM or downloaded from the internet. To simplify things up, we integrated an Electron app builder right in the App Manager.
+      Electron можно установить через NPM или загрузить из интернета. Чтобы упростить работу, мы интегрировали конструктор приложений Electron прямо в App Manager.
     </p>
 
     <img src="files/creating-desktop-apps/app-manager-create-native-app.jpg">
 
     <p>
-      By using it you can download Electron binaries for the selected target platform and then build a ready-to-use application right from your Verge3D app.
+      С его помощью вы можете загрузить двоичные файлы Electron для выбранной целевой платформы, а затем создать готовое к использованию приложение прямо из приложения Verge3D.
     </p>
 
     <img src="files/creating-desktop-apps/app-manager-electron.jpg">
 
     <p>
-      Since the number of available platforms is huge, use the following memo to get what you really need:
+      Поскольку количество доступных платформ огромно, воспользуйтесь следующей памяткой, чтобы понять, что вам действительно нужно: 
     </p>
 
     <dl>
       <dt>None</dt>
-      <dd>Do not install any binaries. Use the NPM utility and the instructions <a href="manual/ru/introduction/Creating-Desktop-Apps.html#using_npm">below</a> to continue building your app.</dd>
+      <dd>Не устанавливайте никаких двоичных файлов. Используйте утилиту NPM и инструкции <a href="manual/ru/introduction/Creating-Desktop-Apps.html#using_npm">ниже</a>, чтобы продолжить создание вашего приложения.</dd>
 
       <dt>Windows (64-bit)</dt>
-      <dd>Windows 7 or later, 64 bit.</dd>
+      <dd>Windows 7 или более поздняя версия, 64 бит.</dd>
       <dt>macOS (64-bit)</dt>
-      <dd>macOS 10.10 (Yosemite) or later, Intel Macs.</dd>
+      <dd>macOS 10.10 (Yosemite) или более поздняя версия, Intel Macs.</dd>
       <dt>macOS App Store (64-bit)</dt>
-      <dd>Reduced version for Mac App Store. Runs on macOS 10.10 (Yosemite) or later, Intel Macs.</dd>
+      <dd>Уменьшенная версия для Mac App Store. Работает на macOS 10.10 (Yosemite) или более поздней версии, Intel Mac.</dd>
       <dt>Linux (64-bit)</dt>
-      <dd>Linux, 64 bit, such as Ubuntu, Fedora, OpenSuse, or Arch.</dd>
+      <dd>Linux, 64 bit, такие как Ubuntu, Fedora, OpenSuse, или Arch.</dd>
 
       <dt>Windows (ARM)</dt>
-      <dd>Windows 10 running on devices with 64-bit ARM processors.</dd>
+      <dd>Windows 10 на устройствах с 64-разрядными процессорами ARM.</dd>
       <dt>macOS (ARM)</dt>
-      <dd>macOS 11 (Big Sur) or later, Apple Silicon (aka M1) Macs.</dd>
+      <dd>macOS 11 (Big Sur) или более поздняя версия, компьютеры Apple Silicon (также известный как M1) Mac.</dd>
       <dt>macOS App Store (ARM)</dt>
-      <dd>Reduced version for Mac App Store. Runs on macOS 11 (Big Sur) or later, Apple Silicon (aka M1) Macs.</dd>
+      <dd>Уменьшенная версия для Mac App Store. Работает на macOS 11 (Big Sur) или более поздней версии, компьютерах Apple Silicon (также известных как M1).</dd>
       <dt>Linux (ARM)</dt>
-      <dd>Linux on 64-bit ARM devices.</dd>
-
+      <dd>Linux на 64-битных устройствах ARM.
       <dt>Windows (32-bit)</dt>
-      <dd>Windows 7 or later, 32 bit.</dd>
+      <dd>Windows 7 или более поздняя версия, 32 bit.</dd>
       <dt>Linux (32-bit)</dt>
-      <dd>Linux, 32 bit version.</dd>
+      <dd>Linux, 32 bit версия.</dd>
     </dl>
 
     <p class="note">
-      Due to architecture limitations of the Windows OS, it's not possible to build macOS apps on that system. Please use macOS or Linux instead.
+      Из-за ограничений архитектуры ОС Windows невозможно создавать приложения для macOS на этой системе. Вместо этого используйте macOS или Linux. 
     </p>
 
     <p>
-      Once your app is ready, download it and then unpack the zip archive to some directory.
+      Когда ваше приложение будет готово, скачайте его, а затем распакуйте zip-архив в какой-нибудь каталог.
     </p>
 
 
     [anchor:running_your_app]
 
-    <h2>Running your Application</h2>
+    <h2>Запуск Вашего Приложения</h2>
 
     <p>
-      Exec your application by running *electron.exe* (or *Electron.app* on macOS, or *electron* on Linux) located in the app directory.
+      Выполните ваше приложение, запустив *electron.exe* (или *Electron.app* на macOS, или *electron* на Linux), расположенный в каталоге app.
     </p>
 
     <img src="files/creating-desktop-apps/electron-new-app.jpg" class="centered" style="max-width: 827px">
 
     <p>
-      Keep in mind, that since your application is <em>unsigned</em>, both Windows and macOS (but not Linux) prevent it from running. For example, on Windows, you'll see the following *Windows protected your PC* dialog:
+      Имейте в виду, что поскольку ваше приложение не подписано, и Windows, и macOS (но не Linux) не позволят его запустить. Например, в Windows вы увидите следующее диалоговое окно *Windows защитила ваш компьютер*: 
     </p>
 
     <img src="files/creating-desktop-apps/windows-protected-your-pc.jpg" class="centered">
 
     <p>
-      Click on the *More info* link, then *Run anyway* to run the application. In order to fix this issue, expecially when you distribute your work to the end users, your app must be signed. See more in the <a href="https://www.electronjs.org/docs/tutorial/code-signing" target="_blank">code signing</a> section of the Electron documentation.
+      Нажмите на ссылку *Дополнительная информация*, затем *В любом случае запустить*, чтобы запустить приложение. Чтобы решить эту проблему, особенно когда вы распространяете свою работу среди конечных пользователей, ваше приложение должно быть подписано. Подробнее см. в разделе  <a href="https://www.electronjs.org/docs/tutorial/code-signing" target="_blank">подписание кода</a> документации Electron. 
     </p>
 
 
     [anchor:beautifying_things]
 
-    <h2>Beautifying Things</h2>
+    <h2>Настройка Дополнительных Параметров Приложения</h2>
 
 
     [anchor:modifying_app_name_icon]
 
-    <h3>Modifying Application Name and Icon</h3>
+    <h3>Изменение Имени и Значка Приложения</h3>
 
     <p>
-      See the <a href="https://www.electronjs.org/docs/tutorial/application-distribution#rebranding-with-downloaded-binaries" target="_blank">official Electron guide</a> on how to rename your application binary and assign custom icon.
+      Смотрите <a href="https://www.electronjs.org/docs/tutorial/application-distribution#rebranding-with-downloaded-binaries" target="_blank">официальное руководство Electron</a> о том, как переименовать двоичный файл приложения и назначить пользовательский значок.
     </p>
 
 
     [anchor:customizing_menu]
 
-    <h3>Customizing Menu</h3>
+    <h3>Настройка Меню</h3>
 
     <p>
-      To disable application menu altogether, insert the following line in the *main.js* right after *loadFile()* method:
+      Чтобы полностью отключить меню приложения, вставьте следующую строку в *main.js* сразу после метода *loadFile()*:
     </p>
 
     <code>
@@ -126,7 +125,7 @@
     </code>
 
     <p>
-      To create your own menu, first connect *Menu* module to your application:
+      Чтобы создать собственное меню, сначала подключите модуль *Menu* к вашему приложению:
     </p>
 
     <code>
@@ -134,7 +133,7 @@
     </code>
 
     <p>
-      We're going to use *shell* module to open external website upon menu click. So, add *shell* module here as well:
+      Мы будем использовать модуль *shell* для открытия внешнего сайта при нажатии на меню. Поэтому добавьте модуль *shell* и сюда:
     </p>
 
     <code>
@@ -142,7 +141,7 @@
     </code>
 
     <p>
-      Then add the following code to the *main.js* right after *loadFile()* method:
+      Затем добавьте следующий код в *main.js* сразу после метода *loadFile()*:
     </p>
 
     <code>
@@ -167,11 +166,11 @@
     </code>
 
     <p>
-      See the example of the modified *main.js* file <a href="files/creating-desktop-apps/menu-template/main.js" download>here</a>.
+      Пример измененного файла *main.js* можно посмотреть <a href="files/creating-desktop-apps/menu-template/main.js" download>здесь</a>.
     </p>
 
     <p>
-      Run your application, you should get the following:
+      Запустите ваше приложение, и вы должны получить следующее:
     </p>
 
     <img src="files/creating-desktop-apps/electron-app-with-menu.jpg" class="centered" style="max-width: 800px">
@@ -179,20 +178,20 @@
 
     [anchor:using_npm]
 
-    <h2>Advanced Electron Development with NPM</h2>
+    <h2>Расширенная Разработка Electron с NPM</h2>
 
     <p>
-      To work with Electron, you'll need the *npm* utility which is part of the *Node.js* runtime. You can install it by following <a href="https://nodejs.org/en/download/" target="_blank">these instructions</a>.
+      Для работы с Electron вам понадобится утилита *npm*, которая является частью среды выполнения *Node.js*. Вы можете установить ее, следуя <a href="https://nodejs.org/en/download/" target="_blank">этим инструкциям</a>. 
     </p>
 
     <p>
-      See more info on how to use NPM in the <a href="https://www.electronjs.org/docs" target="_blank">Electron docs</a>.
+      Более подробную информацию об использовании NPM можно найти в документации <a href="https://www.electronjs.org/docs" target="_blank">Electron</a>.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
