--- a/manual/ru/introduction/Facebook-3D-Posts.html
+++ b/manual/ru/introduction/Facebook-3D-Posts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Facebook 3D Posts with Verge3D - Soft8Soft</title>
+    <title>3D-посты Facebook с Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Here you will find the workflow and best practices for creating 3D Posts on Facebook using 3ds Max and Blender."/>
     <base href="../../../" />
@@ -9,38 +9,38 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Facebook 3D Posts</h1>
+    <h1>3D-посты Facebook</h1>
 
     <p>
-    <span class="red">Facebook 3D posts feature is now deprecated. Please use Facebook Apps to embed your Verge3D applications.</span>
+    <span class="red">Функция 3D-постов в Facebook теперь устарела. Для встраивания приложений Verge3D используйте Facebook Apps.</span>
     </p>
 
     <p>
-    Creating a 3D post on Facebook is straightforward: at first, you perform export in .glb format (.glb is the binary version of the glTF), and then drag and drop this file to your Facebook post composer. Below is the detailed breakdown.
+      Создать 3D-поста на Facebook очень просто: сначала вы выполняете экспорт в формате .glb (.glb - это двоичная версия glTF), а затем перетаскиваете этот файл в композитор поста на Facebook. Ниже приведена подробная схема.
     </p>
 
     <ul>
-    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Export_GLB_3ds_Max">Export GLB from 3ds Max</a></li>
-    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Export_GLB_Blender">Export GLB from Blender</a></li>
-    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Compose_3D_Post_in_Facebook">Compose 3D Post in Facebook</a></li>
-    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Starter_Files">Starter Files</a></li>
-    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Technical_Requirements">Technical Requirements</a></li>
-    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Optimization_Tips">Optimization Tips</a></li>
+    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Export_GLB_3ds_Max">Экспорт GLB из 3ds Max</a></li>
+    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Export_GLB_Blender">Экспорт GLB из Blender</a></li>
+    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Compose_3D_Post_in_Facebook">Составить 3D Post в Facebook</a></li>
+    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Starter_Files">Начальные файлы</a></li>
+    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Technical_Requirements">Технические Требования</a></li>
+    <li><a href="manual/ru/introduction/Facebook-3D-Posts.html#Optimization_Tips">Подсказки касательно Оптимизации</a></li>
     </ul>
 
 
     <p><a href="manual/ru/introduction/Facebook-3D-Posts.html#Export_GLB_3ds_Max" id="Export_GLB_3ds_Max" class="permalink">#</a></p>
 
-    <h2>Export GLB from 3ds Max</h2>
+    <h2>Экспорт GLB из 3ds Max</h2>
 
     <p>
-    To perform export in <strong>3ds Max</strong>, go to the Verge3D menu and select "Export Facebook GLB...".
+      Чтобы выполнить экспорт в <strong>3ds Max</strong>, перейдите в меню Verge3D и выберите "Export Facebook GLB...".
     </p>
 
     <img src="files/facebook-3d-posts/export-glb-max1.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    In the appeared file dialog, choose the export path and click *Save*.
+      В появившемся диалоговом окне файла выберите путь экспорта и нажмите *Сохранить*.
     </p>
 
     <img src="files/facebook-3d-posts/export-glb-max2.jpg" class="centered" style="max-width: 1000px">
@@ -48,10 +48,10 @@
 
     <p><a href="manual/ru/introduction/Facebook-3D-Posts.html#Export_GLB_Blender" id="Export_GLB_Blender" class="permalink">#</a></p>
 
-    <h2>Export GLB from Blender</h2>
+    <h2>Экспорт GLB из Blender</h2>
 
     <p>
-    To perform export in <strong>Blender</strong>, go to "File > Export" and select the "Facebook GLB (.glb)" option. The generic GLB-export option "Verge3D glTF Binary (.glb)" will also work but will produce slightly less optimized files.
+      Чтобы выполнить экспорт в <strong>Blender</strong>, перейдите в "File > Export" и выберите опцию "Facebook GLB (.glb)". Общий вариант GLB-экспорта "Verge3D glTF Binary (.glb)" также подойдет, но с его помощью на выходе мы получим немного менее оптимизированные файлы.
     </p>
 
     <img src="files/facebook-3d-posts/export-glb-blender.png" class="centered" style="max-width: 1000px">
@@ -59,79 +59,82 @@
 
     <p><a href="manual/ru/introduction/Facebook-3D-Posts.html#Compose_3D_Post_in_Facebook" id="Compose_3D_Post_in_Facebook" class="permalink">#</a></p>
 
-    <h2>Compose 3D Post in Facebook</h2>
+    <h2>Составить 3D Post в Facebook</h2>
 
     <p>
-    Now you can just drag and drop the GLB file to your Facebook post.
+      Теперь вы можете просто перетащить файл GLB в свой пост на Facebook.
     </p>
 
     <img src="files/facebook-3d-posts/post-fb.png" class="centered" style="max-width: 1000px">
 
     <p>
-    In the Facebook post composer you can also choose the background to your liking.
+      В композиторе поста Facebook вы также можете выбрать фон по своему вкусу.
     </p>
 
     <img src="files/facebook-3d-posts/3d-post-example.png" class="centered" style="max-width: 1000px">
 
     <p>
-    Check it out how it looks on Facebook: <a href="https://www.facebook.com/soft8soft/posts/2003080113280076" target="_blank">link</a>. The source file for this model can be found in your Verge3D installation inside the "applications" folder (see below in "Starter files").
+      Посмотрите, как это выглядит на Facebook: <a href="https://www.facebook.com/soft8soft/posts/2003080113280076" target="_blank">ссылка</a>. Исходный файл для этой модели можно найти в Verge3D в папке "applications" (см. ниже в разделе "Starter files").
     </p>
 
 
      <p><a href="manual/ru/introduction/Facebook-3D-Posts.html#Starter_Files" id="Starter_Files" class="permalink">#</a></p>
 
-    <h2>Starter Files</h2>
+    <h2>Начальные Файлы</h2>
 
     <p>
-    We provide a sample Verge3D project that has been configured with the necessary export settings, for both 3ds Max and Blender. The starter project contains exactly the same environment map that is used by Facebook for maximum consistency.
+      Мы предоставляем образец проекта Verge3D, в котором настроены необходимые параметры экспорта как для 3ds Max, так и для Blender. Стартовый проект содержит точно такую же карту окружения, которая используется в Facebook для максимальной согласованности.
     </p>
 
     <img src="files/facebook-3d-posts/facebook-ready-asset-file-blender.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    It can be found inside the Verge3D <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">distribution</a>, located "applications/fb_max" (3ds Max) or "applications/fb" (Blender).
+      Его можно найти внутри <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">дистрибутива</a> Verge3D, расположенного в "applications/fb_max" (3ds Max) или "applications/fb" (Blender).
     </p>
 
 
     <p><a href="manual/ru/introduction/Facebook-3D-Posts.html#Technical_Requirements" id="Technical_Requirements" class="permalink">#</a></p>
 
-    <h2>Technical Requirements</h2>
+    <h2>Технические Требования</h2>
 
     <ul>
     <li>
-    Facebook requires your GLB to be under 3Mb in total, the smaller the better.
+      Facebook требует, чтобы ваш GLB файл не превышал 3 Мб в целом, чем меньше, тем лучше. 
     </li>
     <li>
-    glTF-compliant PBR materials (<a href="manual/ru/introduction/Physical-material.html">3ds Max</a>, <a href="manual/ru/introduction/Physical-material-Blender.html">Blender</a>) are only supported - consider converting your materials if it is not the case.
+      Поддерживаются только glTF-совместимые PBR-материалы (<a href="manual/ru/introduction/Physical-material.html">3ds Max</a>, <a href="manual/ru/introduction/Physical-material-Blender.html">Blender</a>) - подумайте о конвертации ваших материалов.
     </li>
     <li>
-    PNG or JPEG files must be used for textures, and must be power-of-2 in each dimension (256x512 is ok, for example).
+      Для текстур должны использоваться файлы PNG или JPEG, которые должны иметь размерность, кратную 2 (например 256x512).
     </li>
     <li>
-    Textures can be up to 4k, although Facebook developers recommend keeping them under 2k.
+      Текстуры могут достигать 4k, хотя разработчики Facebook рекомендуют не превышать 2k.
     </li>
     </ul>
 
 
     <p><a href="manual/ru/introduction/Facebook-3D-Posts.html#Optimization_Tips" id="Optimization_Tips" class="permalink">#</a></p>
 
-    <h2>Optimization Tips</h2>
+    <h2>Подсказки касательно Оптимизации</h2>
 
     <p>
-    Here are some recommendations on how to keep your GLB file below 3 Mb yet to have decent graphics.
+      Вот несколько рекомендаций о том, как сделать так, чтобы ваш файл GLB не превышал 3 Мб и при этом имел достойную графику.
     </p>
 
     <ul>
     <li>
-    Prefer JPEG textures over PNG when you don't need transparency.
+      Предпочитайте текстуры JPEG, а не PNG, если вам не нужна прозрачность.
     </li>
     <li>
-    Consider finding an optimal compression ratio for the JPEG files.
+      Рассмотрим поиск оптимальной степени сжатия для файлов JPEG.
     </li>
     <li>
-    Clean your asset files from any unused data. This includes auxiliary objects, animation and shape keys (which are not currently supported by Facebook anyway), unused vertex colors, UVs, etc.
+      Очистите файлы ассетов от всех неиспользуемых данных. Сюда входят вспомогательные объекты, ключи анимации и ключи формы (которые в настоящее время не поддерживаются Facebook), неиспользуемые цвета вершин, UV и т.д.
     </li>
     </ul>
+    <h2>Остались вопросы?</h2>
+
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
