--- a/manual/ru/introduction/Creating-Mobile-Apps.html
+++ b/manual/ru/introduction/Creating-Mobile-Apps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Creating Mobile Applications with Apache Cordova - Soft8Soft</title>
+    <title>Создание мобильных приложений с помощью Apache Cordova - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to use Apache Cordova to create cross-platform Verge3D applications for mobile."/>
     <base href="../../../" />
@@ -12,10 +12,10 @@
   </head>
   <body><article>
 
-    <h1>Creating Mobile Applications with Apache Cordova</h1>
+    <h1>Создание Мобильных Приложений с Помощью Apache Cordova</h1>
 
     <p>
-      Apache Cordova is a tool which converts web applications to cross-platform mobile applications. Cordova is mostly used to create apps for Android and iOS platforms, however, it's also possible to develop Windows, macOS, and Linux applications. The tool is completely free, easy-to-use and allows for advanced customizations with JavaScript (if you need it).
+      Apache Cordova - это инструмент, который конвертирует веб-приложения в кроссплатформенные мобильные приложения. Cordova в основном используется для создания приложений для платформ Android и iOS, однако на ней также можно разрабатывать приложения для Windows, macOS и Linux. Инструмент полностью бесплатен, прост в использовании и позволяет выполнять расширенную настройку с помощью JavaScript (если вам это необходимо).
     </p>
 
 
@@ -24,131 +24,130 @@
 
     [anchor:preliminary_considerations]
 
-    <h2>Preliminary Considerations</h2>
+    <h2>Информация к Ознакомлению</h2>
 
     <p>
-      Before you start working with Cordova, make sure you have the following:
+      Прежде чем начать работу с Cordova, убедитесь, что у вас в наличии следующее:
     </p>
 
     <ul>
       <li>
-        Hardware. You can develop Android apps on any computer running Windows, macOS, or Linux, while developing apps for Apple devices will require a decent Mac system.
+        Аппаратное обеспечение. Вы можете разрабатывать приложения для Android на любом компьютере под управлением Windows, macOS или Linux, в то время как для разработки приложений для устройств Apple потребуется MacOS.      </li>
+
+      <li>
+        Базовые навыки работы с консолью Windows/macOS/Linux (она же командный интерпретатор). Если у вас их нет, пожалуйста, найдите в Интернете учебники для начинающих.
       </li>
 
       <li>
-        Basic Windows/macOS/Linux console (aka command prompt) skills. If you don't, please seek the internet for beginner-level tutorials.
+        Время. Следуя этому руководству, вы сможете создать свое первое приложение очень быстро. Однако могут пройти часы или дни, прежде чем вы получите одобрение своего аккаунта разработчика и опубликуете свое приложение в App Store / Google Play.
       </li>
 
       <li>
-        Time. By following this guide you can build your first app really quick, however it may take hours or days, before you get your developer account approved and your app published in App Store / Google Play.
-      </li>
-
-      <li>
-        Money. Creating and running applications on your own devices is completely free. However, to get published in Google Play you'll need $25 (one-time payment), while for App Store, you'll need $99 (paid annually).
+        Деньги. Создание и запуск приложений на собственных устройствах совершенно бесплатны. Однако для публикации в Google Play вам потребуется $25 (единовременная оплата), а для App Store - $99 (ежегодная оплата).
       </li>
     </ul>
 
     <p>
-      The good part, you don't need to be an Android or iOS developer to create apps for these platforms. Once you have your development system up and running, creating mobile versions of your Verge3D apps would be really easy!
+      Самое приятное, что вам не нужно быть разработчиком Android или iOS, чтобы создавать приложения для этих платформ. Как только вы запустите свою систему разработки, создание мобильных версий ваших приложений Verge3D станет очень простым!
     </p>
 
 
     [anchor:getting_cordova]
 
-    <h2>Getting Started with Apache Cordova</h2>
+    <h2>Начало Работы с Apache Cordova</h2>
 
     <p>
-      To work with Cordova, you'll need the *npm* utility which is part of the *Node.js* runtime. You can install it by following <a href="https://nodejs.org/en/download/" target="_blank">these instructions</a>.
+      Для работы с Cordova вам понадобится утилита *npm*, которая является частью среды разработки *Node.js*. Вы можете установить ее, следуя <a href="https://nodejs.org/en/download/" target="_blank">этим инструкциям</a>.
     </p>
 
     <p class="notes">
-      For Linux you better get npm via the package manager. See <a href="https://nodejs.org/en/download/package-manager/" target="_blank">here</a> for details.
+      Для Linux вам лучше получить npm через менеджер пакетов. Смотрите <a href="https://nodejs.org/en/download/package-manager/" target="_blank">здесь</a> для дополнительной информации.
     </p>
 
     <p>
-      Once npm installed, Cordova binaries can be installed with the following command.
+      После установки npm двоичные файлы Cordova можно установить с помощью следующей команды.
     </p>
 
-    <p>On macOS/Linux:</p>
+    <p>На macOS/Linux:</p>
 
     <code>sudo npm install -g cordova</code>
 
-    <p>On Windows:</p>
+    <p>На Windows:</p>
 
     <code>npm install -g cordova</code>
 
 
     [anchor:creating_app_tempalte]
 
-    <h2>Creating Application Template</h2>
+    <h2>Создание Шаблона Приложения</h2>
 
     <p>
-      You can create your mobile app manually or with Cordova command-line utility. However, to simplify things up, we integrated a Cordova template builder right in the App Manager.
+      Вы можете создать свое мобильное приложение вручную или с помощью утилиты командной строки Cordova. Однако, чтобы упростить работу, мы интегрировали конструктор шаблонов Cordova прямо в App Manager.
     </p>
 
     <img src="files/creating-mobile-apps/app-manager-create-native-app.jpg">
 
     <p>
-      By using it you can create a Cordova app template right from your Verge3D app.
+      С его помощью вы можете создать шаблон приложения Cordova прямо из Verge3D.
     </p>
 
     <img src="files/creating-mobile-apps/app-manager-cordova.jpg">
 
     <p>
-      Once your template is ready, download it and then unpack the zip archive to some directory.
+      Когда ваш шаблон будет готов, скачайте его, а затем распакуйте zip-архив в какую-либо директорию.
     </p>
 
 
     [anchor:creating_android_app]
 
-    <h2>Creating Android App</h2>
+    <h2>Создание приложения для Android</h2>
 
     <p>
-      Go to some directory where your Cordova app template located then add the Android platform:
+      Перейдите в каталог, где находится ваш шаблон приложения Cordova, затем добавьте платформу Android:
     </p>
 
     <code>cordova platform add android</code>
 
     <p>
-      Now the hardest part. To be able to build and test your app in the Android emulator or real devices, you're gonna need to install and configure additional software.
+      Теперь самое сложное. Чтобы иметь возможность создавать и тестировать свое приложение в эмуляторе Android или на реальных устройствах, вам потребуется установить и настроить дополнительное программное обеспечение.
     </p>
 
     <p>
-      First, you need to install Android Studio, get it from <a href="https://developer.android.com/studio">here</a>.
+      Во-первых, вам нужно установить Android Studio, возьмите его <a href="https://developer.android.com/studio">здесь</a>.
     </p>
 
     <p>
-      Once Android Studio is installed, you need to specify path to it in the *ANDROID_SDK_ROOT* environment variable. On Windows you'll also need to set the *JAVA_HOME* variable with the path to the Java directory.
+      После установки Android Studio необходимо указать путь к ней в значении переменной *ANDROID_SDK_ROOT*. В Windows вам также нужно будет установить значение переменной *JAVA_HOME* с путем к каталогу Java.
     </p>
 
     <p>
-      See <a href="https://cordova.apache.org/docs/en/10.x/guide/platforms/android/index.html#setting-environment-variables">here</a> on how to setup these variables.
+      Смотрите <a href="https://cordova.apache.org/docs/en/10.x/guide/platforms/android/index.html#setting-environment-variables">здесь</a> о том, как выставить эти переменные.
     </p>
 
     <p>
-      The last thing you will require is the *Gradle* build tool. See <a href="https://gradle.org/install/">here</a> for instructions.
+      Последнее, что вам понадобится, это инструмент сборки *Gradle*. Ознакомьтесь с инструкцией <a href="https://gradle.org/install/">здесь</a> .
     </p>
 
     <p>
-      To check if you satisfy the requirements for building, execute the following command in your apps directory:
+      Чтобы проверить соответствие требованиям сборки, выполните следующую команду в директории вашего приложения:
     </p>
 
     <code>cordova requirements</code>
 
     <p>
-      To build your app, exec:
+      Чтобы создать свое приложение, выполните
     </p>
 
     <code>cordova build android</code>
 
     <p>
-      To run it in the Android emulator, exec:
+      Чтобы запустить его в эмуляторе Android, выполните:
     </p>
 
     <code>cordova emulate android</code>
 
     <p>
-      To run your app on the real phone connected to your system run:
+      Чтобы запустить ваше приложение на реальном телефоне, подключенном к вашей системе, выполните:
     </p>
 
     <code>cordova run android</code>
@@ -156,134 +155,134 @@
 
     [anchor:creating_ios_app]
 
-    <h2>Creating iOS App</h2>
+    <h2>Создание Приложения для iOS</h2>
 
     <p>
-      Go to some directory where your Cordova app template located then add the iOS platform:
+      Перейдите в каталог, где находится ваш шаблон приложения Cordova, затем добавьте платформу iOS:
     </p>
 
     <code>cordova platform add ios</code>
 
     <p>
-      Now the hardest part. To be able to build and test your app in the iOS emulator or real devices, you're gonna need to install and configure additional software.
+      Теперь самое сложное. Чтобы иметь возможность создавать и тестировать свое приложение в эмуляторе iOS или на реальных устройствах, вам потребуется установить и настроить дополнительное программное обеспечение.
     </p>
 
     <p>
-      First, you need to install *XCode*, get it from from the Mac App Store.
+      Сначала вам нужно установить *XCode*, скачайте его из Mac App Store.
     </p>
 
     <p>
-      Then install the *Homebrew* package manager:
+      Затем установите менеджер пакетов *Homebrew*:
     </p>
 
     <code class="language-sh">/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"</code>
 
     <p>
-      After that you'll need <strong>ios-deploy</strong> tools.
+      После этого вам понадобятся инструменты <strong>ios-deploy</strong> .
     </p>
 
     <code>brew install ios-deploy</code>
 
     <p>
-      Then you're gonna need *CocoaPods* dependency manager:
+      Тогда вам понадобится менеджер зависимостей *CocoaPods*:
     </p>
 
     <code>sudo gem install cocoapods</code>
 
     <p>
-      To check if you satisfy the requirements for building, execute the following command in your apps directory:
+      Чтобы проверить соответствие требованиям сборки, выполните следующую команду в каталоге apps:
     </p>
 
     <code>cordova requirements</code>
 
     <p>
-      It's time to run your app, exec:
+      Пришло время запустить ваше приложение, выполните:
     </p>
 
     <code>cordova emulate ios</code>
 
     <p>
-      to build and run it in the iOS emulator.
+      чтобы собрать и запустить его в эмуляторе iOS.
     </p>
 
     <img src="files/creating-mobile-apps/farmers-journey-ios.jpg" class="centered" style="max-width: 415px">
 
     <p>
-      To run your app on the real phone connected to your system exec:
+      Чтобы запустить ваше приложение на реальном телефоне, подключенном к вашей системе, выполните:
     </p>
 
     <code>cordova run ios</code>
 
     <p>
-      To run on a real device your app must be signed via XCode. See <a href="https://help.apple.com/xcode/mac/current/#/dev5a825a1ca" target="_blank">here</a> for instructions.
+      Для запуска на реальном устройстве ваше приложение должно быть зарегистрировано в XCode. Инструкции для ознакомления вы найдёте <a href="https://help.apple.com/xcode/mac/current/#/dev5a825a1ca" target="_blank">здесь</a> .
     </p>
 
 
 
     [anchor:beautifying_things]
 
-    <h2>Beautifying Things</h2>
+    <h2>Улучшаем Приложение</h2>
 
 
     [anchor:modifying_app_icon]
 
-    <h3>Modifying Application Name and Icon</h3>
+    <h3>Изменение Имени и Значка Приложения</h3>
 
     <p>
-      See the <a href="https://cordova.apache.org/docs/en/latest/config_ref/images.html" target="_blank">official Cordova guide</a> on how to assign custom icon to your application.
+      Смотрите <a href="https://cordova.apache.org/docs/en/latest/config_ref/images.html" target="_blank">официальное руководство Cordova</a> о том, как назначить пользовательский значок для вашего приложения.
     </p>
 
 
     [anchor:cordova_specific_events]
 
-    <h3>Cordova-Specific Events</h3>
+    <h3>Эвенты, присущие Cordova</h3>
 
     <p>
-      There are 3 Cordova-specific events available via JavaScript or Puzzles which you can use to make your apps more mobile-friendly:
+      Есть 3 "ивента", присущие для Cordova, доступные через JavaScript или пазлы, которые вы можете использовать, чтобы сделать ваши приложения более удобными для мобильных устройств:
     </p>
 
     <ul>
-      <li>*deviceready* — triggered when your app is fully initialized. You can also use it to detect when your app is running on Cordova.</li>
-      <li>*pause* — triggered when you app goes to the background or got switched by another app. Use it to pause your app rendering / sound playback / videos etc.</li>
-      <li>*resume* — triggered when you app becomes active. This event is the opposite of the *pause*.</li>
+      <li>*deviceready* - срабатывает, когда ваше приложение полностью инициализировано. Вы также можете использовать его для определения того, когда ваше приложение запущено на Cordova.</li>
+      <li>*pause* — срабатывает, когда приложение переходит в фоновый режим или переключается на другое приложение.  Используйте его для приостановки рендеринга приложения / воспроизведения звука / видео и т.д.</li>
+      <li>*resume* — срабатывает, когда ваше приложение становится активным. Это событие противоположно *pause*.</li>
     </ul>
 
     <img src="files/creating-mobile-apps/cordova-events-puzzles.jpg">
 
     <p>
-      Make sure you register these events on the *document* element. Also, use the *in parent doc* option in case if your app runs in the iframe (see more info about this setup <a href="manual/ru/introduction/HTML-based-user-interfaces.html">here</a>).
+      Убедитесь, что вы фиксируете эти события в элементе *document*. Также используйте опцию *in parent doc* в случае, если ваше приложение работает в iframe (см. более подробную информацию об этой связке <a href="manual/ru/introduction/HTML-based-user-interfaces.html">здесь</a>).
     </p>
 
     [anchor:native_ui_dialogs]
 
-    <h3>Creating Native UI Dialogs</h3>
+    <h3>Создание Нативных Диалогов UI</h3>
 
     <p>
-      Use the <a href="https://cordova.apache.org/docs/en/10.x/reference/cordova-plugin-dialogs/index.html" target="_blank">cordova-plugin-dialogs</a> plugin.
+      Используйте плагин <a href="https://cordova.apache.org/docs/en/10.x/reference/cordova-plugin-dialogs/index.html" target="_blank">cordova-plugin-dialogs</a> .
     </p>
 
 
     [anchor:more_features]
 
-    <h3>More Features</h3>
+    <h3>Дополнительные Возможности</h3>
 
     <p>
-      You can create full-featured app with access to camera, battery info, device file system, geolocation etc. See the appropriate plugin in the <a href="https://cordova.apache.org/docs/en/latest/" target="_blank">Cordova documentation</a>.
+      Вы можете создать полнофункциональное приложение с доступом к камере, информации о батарее, файловой системе устройства, геолокации и т.д. Смотрите соответствующий плагин в <a href="https://cordova.apache.org/docs/en/latest/" target="_blank">документации Cordova</a>.
     </p>
 
 
     [anchor:publishing]
 
-    <h2>Publishing your App</h2>
+    <h2>Публикация Вашего Приложения</h2>
 
     <p>
-      See <a href="https://jackmckew.dev/releasing-cordova-apps-on-google-play-app-store.html" target="_blank">here</a> for instructions.
+      Ознакомьтесь с инструкцией <a href="https://jackmckew.dev/releasing-cordova-apps-on-google-play-app-store.html" target="_blank">здесь</a> .
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем<a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
