--- a/manual/ru/introduction/Personalizing-Verge3D-Apps.html
+++ b/manual/ru/introduction/Personalizing-Verge3D-Apps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Personalizing Verge3D Applications - Soft8Soft</title>
+    <title>Персонализация приложений Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to customize styles of your Verge3D applications."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Personalizing Verge3D Applications</h1>
+    <h1>Персонализация приложений Verge3D</h1>
 
     <p>
-      Use this guide to create customized Verge3D applications targeted to your specific audience.
+      Используйте это руководство для создания индивидуальных приложений Verge3D, ориентированных на вашу конкретную аудиторию.
     </p>
 
     [contents]
@@ -21,50 +21,50 @@
 
     [anchor:custom_ui]
 
-    <h2>Custom UI</h2>
+    <h2>Пользовательский UI</h2>
 
     <p>
-      The best way to create fully-customized Verge3D experience is to <a href="manual/ru/introduction/HTML-based-user-interfaces.html">build UI on top of your 3D part</a> (see how the <a href="https://cdn.soft8soft.com/demo/applications/scooter/index.html" target="_blank">Scooter demo</a> as an example of this approach). However, given the difficulties of creating such UI, we'll descuss customizing <em>default</em> Verge3D experiences here. This includes preloader screen, annotations, fullscreen button, as well as page title/description and social media tags.
+      Лучший способ создать полностью персонализированный UI в Verge3D - это <a href="manual/ru/introduction/HTML-based-user-interfaces.html">создание пользовательского интерфейса поверх 3D</a> (посмотрите демо <a href="https://cdn.soft8soft.com/demo/applications/scooter/index.html" target="_blank">Scooter demo</a> в качестве примера такого подхода). Однако, учитывая трудности создания такого пользовательского интерфейса, здесь мы расскажем о настройке <em>стандартного</em> интерфейса Verge3D. Сюда входят экран предзагрузки, аннотации, кнопка полноэкранного режима, а также заголовок/описание страницы и теги социальных сетей.
     </p>
 
 
     [anchor:introduction]
 
-    <h2>Introduction to UI Styling</h2>
+    <h2>Введение в стилизацию UI</h2>
 
     <p>
-      Along with canvas which renders 3D part, Verge3D application includes additional HTML elements for preloader, annotations, fullscreen button, etc. All these elements are supplemented by CSS classes which can be easily modified.
+      Наряду с экраном, на котором отображается 3D-часть, приложение Verge3D включает в себя дополнительные HTML-элементы для экрана предзагрузки, аннотаций, кнопки полноэкранного режима и др. Все эти элементы дополнены классами CSS, которые можно легко изменить.
     </p>
 
     <p>
-      The easiest way to make your app personalized - choose *Standard Light* or *Standard Dark* in the app creation dialog:
+      Самый простой способ сделать ваше приложение персонализированным - выбрать *Standard Light* или *Standard Dark* в диалоге создания приложения:
     </p>
 
     <img src="files/personalizing-verge3d-apps/light-dark-theme.jpg" class="centered" style="max-width: 522px">
 
     <p>
-      For more advanced customizations, check out the <em>src/style.css</em> file. Do not change this file as it is compiled right into Verge3D. Instead, add all styling code into your application main CSS file. For example if your app is called "My Awesome App" then you should modify the following file:
+      Для более сложных настроек обратитесь к файлу <em>src/style.css</em> . Не изменяйте этот файл, поскольку он скомпилирован прямо в Verge3D. Вместо этого добавьте весь код стилей в основной CSS-файл вашего приложения. Например, если ваше приложение называется "My Awesome App", то вам следует изменить следующий файл:
     </p>
 
     <code>applications/my_awesome_app/my_awesome_app.css</code>
 
     <p>
-      Alternatively, you can modify your CSS classes by using the Puzzles editor. Check out the <a href="manual/ru/puzzles/HTML.html#set_css_rule">set css rule</a> puzzle reference.
+      Кроме того, вы можете изменить классы CSS с помощью редактора пазлов. Смотрите пример пазла <a href="manual/ru/puzzles/HTML.html#set_css_rule">set css rule</a> .
     </p>
 
 
     [anchor:preloader]
 
-    <h2>Customizing Preloader</h2>
+    <h2>Настройка Экрана Загрузки</h2>
 
-    <p>To modify your preloader change the following CSS classes:</p>
+    <p>Для модификации экрана загрузки измените следующие классы CSS:</p>
 
-    <p>*v3d-simple-preloader-background* - for changing background of the entire preloader screen.</p>
-    <p>*v3d-simple-preloader-container* - for changing container element with preloader image and bar. By overriding this class you can customize preloader position and size.</p>
-    <p>*v3d-simple-preloader-bar* - for changing loading bar.</p>
-    <p>*v3d-simple-preloader-logo* - for changing preloader image.</p>
+    <p>*v3d-simple-preloader-background* - для изменения фона всего экрана экрана загрузки.</p>
+    <p>*v3d-simple-preloader-container* - для изменения элемента контейнера с изображением и полосой экрана загрузки. Переопределив этот класс, вы можете настроить положение и размер экрана загрузки.</p>
+    <p>*v3d-simple-preloader-bar* - для изменения полосы загрузки.</p>
+    <p>*v3d-simple-preloader-logo* - для изменения изображения экрана загрузки.</p>
 
-    <p>For example, if you need to make progress bar <em>red</em> instead of the default <em>blue</em>, add the following code to your application's main CSS file:</p>
+    <p>Например, если вам нужно сделать индикатор прогресса <em>красным</em> вместо <em>синего</em> по умолчанию, добавьте следующий код в основной CSS-файл вашего приложения:</p>
 
     <code class="language-css">
     .v3d-simple-preloader-bar {
@@ -72,7 +72,7 @@
     }
     </code>
 
-    <p>To change the preloader's image to something else:</p>
+    <p>Чтобы изменить изображение экрана загрузки на другое:</p>
 
     <code class="language-css">
     .v3d-simple-preloader-logo {
@@ -81,11 +81,11 @@
     }
     </code>
 
-    <p>Replace PATH_TO_YOUR_IMAGE with the actual URL of your image, such as <em>my_company_logo.png</em>.</p>
+    <p>Замените PATH_TO_YOUR_IMAGE на фактический URL вашего изображения, например <em>my_company_logo.png</em>.</p>
 
-    <p class="note">Recommended preloader image size is 110x110px.</p>
+    <p class="note">Рекомендуемый размер изображения прелоадера - 110x110px.</p>
 
-    <p>To assign custom background image instead of default <em>white</em>:</p>
+    <p>Чтобы назначить пользовательское фоновое изображение вместо стандартного <em>белого</em>:</p>
 
     <code class="language-css">
     .v3d-simple-preloader-background {
@@ -93,7 +93,7 @@
     }
     </code>
 
-    <p>With Puzzles, all three style customizations will look as follows:</p>
+    <p>С пазлами все три варианта настройки стиля будут выглядеть следующим образом:</p>
 
     <!-- HACK: minor styling fix -->
     <img src="files/personalizing-verge3d-apps/puzzles.jpg" class="centered" style="margin-top:-20px">
@@ -101,17 +101,17 @@
 
     [anchor:annotations]
 
-    <h2>Styling Annotations</h2>
+    <h2>Стилизация Аннотаций</h2>
 
-    <p>To style your annotations use the following CSS classes:</p>
+    <p>Для стилизации аннотаций используйте следующие классы CSS:</p>
 
     <ul>
-      <li>*v3d-annotation* - for changing the style of the annotation icon.</li>
-      <li>*v3d-annotation-transparent* - for changing the style of semi-transparent (occluded) annotations.</li>
-      <li>*v3d-annotation-dialog* - for styling annotation popup dialog.</li>
+      <li>*v3d-annotation* - для изменения стиля значка аннотации.</li>
+      <li>*v3d-annotation-transparent* - для изменения стиля полупрозрачных аннотаций.</li>
+      <li>*v3d-annotation-dialog* - для стилизации всплывающего диалога аннотации.</li>
     </ul>
 
-    <p>For example, to make your annotations square with green background:</p>
+    <p>Например, чтобы сделать аннотации квадратными с зеленым фоном код будет выглядеть следующим образом:</p>
 
     <code class="language-css">
     .v3d-annotation {
@@ -125,17 +125,17 @@
 
     [anchor:fullscreen_button]
 
-    <h2>Changing Fullscreen Button</h2>
+    <h2>Изменение Кнопки Полноэкранного Режима</h2>
 
-    <p>Fullsceen button styling is already managed by your application. See the following classes in your app's main CSS file:</p>
+    <p>Стилизация кнопок полноэкранного режима уже управляется вашим приложением. Смотрите следующие классы в главном файле CSS вашего приложения:</p>
 
     <ul>
-      <li>*fullscreen-button* - for changing the style of the both open and close fullscreen buttons.</li>
-      <li>*fullscreen-open* - for styling the image for entering (opening) the fullscreen mode.</li>
-      <li>*fullscreen-close* - for styling the image for leaving (closing) the fullscreen mode.</li>
+      <li>*fullscreen-button* - для изменения стиля обоих кнопок (открытия и закрытия) кнопки полноэкранного режима.</li>
+      <li>*fullscreen-open* - для изменения стиля кнопки открытия полноэкранного режима.</li>
+      <li>*fullscreen-close* - для изменения кнопки закрытия полноэкранного режима.</li>
     </ul>
 
-    <p>For example, if you need to change the default open/close images to something else, modify the following two classes:</p>
+    <p>Например, если вам нужно изменить стандартные изображения открытия/закрытия на что-то другое, измените следующие два класса:</p>
 
     <code class="language-css">
     .fullscreen-open {
@@ -150,26 +150,26 @@
 
     [anchor:title_description]
 
-    <h2>Title and Description</h2>
+    <h2>Название и Описание</h2>
 
     <p>
-      It's difficult to overestimate the importance of assigning meaningful title and description for your app.
+      Трудно переоценить важность назначения осмысленных заголовка и описания для вашего приложения.
     </p>
 
     <p>
-      The title is displayed in the browser tab and also used to bookmark your app link:
+      Заголовок отображается на вкладке браузера, а также используется для названия созданной закладки с вашим приложением:
     </p>
 
     <img src="files/personalizing-verge3d-apps/app-title.jpg" class="centered">
 
     <p>
-      Both title and description are used by the search engines to find your app and present it to the user in the search output:
+      И заголовок, и описание используются поисковыми системами, чтобы найти ваше приложение и представить его пользователю в поисковой выдаче:
     </p>
 
     <img src="files/personalizing-verge3d-apps/google-title-description.jpg" class="centered">
 
     <p>
-      To change app title, find the following snippet in your main HTML file (e.g. <em>my_awesome_app.html</em>):
+      Чтобы изменить название приложения, найдите следующий фрагмент в вашем основном HTML-файле (например<em>my_awesome_app.html</em>):
     </p>
 
     <code>
@@ -177,15 +177,15 @@
     </code>
 
     <p>
-     and change <em>Verge3D Web Interactive</em> to the preferred title.
+     и измените <em>Verge3D Web Interactive</em> на предпочитаемый заголовок.
     </p>
 
     <p class="note">
-      Keep the length of the title below 50-60 characters.
+      Длина заголовка не должна превышать 50-60 символов.
     </p>
 
     <p>
-      Application description can changed in the same manner. Find and replace <em>Interactive 3D web application...</em> content of the <em>&lt;meta name=&quot;description&quot;&gt;</em> tag:
+      Описание приложения может быть изменено таким же образом. Найдите и замените содержание <em>Interactive 3D web application...</em> в теге <em>&lt;meta name=&quot;description&quot;&gt;</em> :
     </p>
 
     <code>
@@ -193,20 +193,20 @@
     </code>
 
     <p>
-      to something that suites your needs better.
+      на более подходящее описание для приложения.
     </p>
 
     <p class="note">
-      Similarly to title, the description text should not be long — 120 to 160 characters is good enough.
+      Как и заголовок, текст описания не должен быть длинным - 120-160 символов вполне достаточно.
     </p>
 
 
     [anchor:language]
 
-    <h2>Language</h2>
+    <h2>Язык</h2>
 
     <p>
-      Modify the following snippet in the beginning of your main HTML file to change app language:
+      Измените следующий фрагмент в начале вашего основного HTML-файла, чтобы изменить язык приложения:
     </p>
 
     <code>
@@ -214,16 +214,16 @@
     </code>
 
     <p>
-      See <a href="https://www.w3schools.com/tags/ref_language_codes.asp" target="_blank">here</a> for a list of possible language codes.
+      Смотрите <a href="https://www.w3schools.com/tags/ref_language_codes.asp" target="_blank">здесь</a> для получения списка возможных языков.
     </p>
 
 
     [anchor:icon]
 
-    <h2>Icon</h2>
+    <h2>Иконка</h2>
 
     <p>
-      To customize page icon displayed in the browser (also known as favicon), replace the following files in the <em>media</em> directory of your application:
+      Чтобы настроить иконку страницы, отображаемую в браузере (также известную как favicon), замените следующие файлы в директории <em>media</em> вашего приложения:
     </p>
 
     <ul>
@@ -237,16 +237,16 @@
     </ul>
 
     <p>
-      To simplify things up, there are plenty of <em>favicon generators</em> available on the web.
+      Чтобы упростить дело, в интернете можно найти множество <em>генераторов иконок</em> .
     </p>
 
 
     [anchor:social_media_tags]
 
-    <h2>Social Media Tags</h2>
+    <h2>Теги Социальных Сетей</h2>
 
     <p>
-      To make you app link look cool on Twitter, modify the following title/description/image tags in the main HTML file:
+      Чтобы ссылка на ваше приложение выглядела круто в Twitter, измените следующие теги title/description/image в основном HTML-файле:
     </p>
 
     <code>
@@ -256,11 +256,11 @@
     </code>
 
     <p>
-      For better result, scale the image to the 1200x630 pixel size and specify <em>absolute</em> URL, e.g. <em>https://www.yoursite.com/app_social_image.jpg</em>, not just <em>app_social_image.jpg</em>.
+      Для получения лучшего результата масштабируйте изображение до размера 1200x630 пикселей и укажите <em>полный</em> URL, например <em>https://www.yoursite.com/app_social_image.jpg</em>, не просто <em>app_social_image.jpg</em>.
     </p>
 
     <p>
-      For Facebook, Reddit, WhatsApp, Weibo, VK, and other social media platforms which support Open Graph protocol, find and change the following tags. You can specify them to the same values you used for Twitter:
+      Для Facebook, Reddit, WhatsApp, Weibo, VK и других платформ социальных сетей, поддерживающих протокол Open Graph, найдите и измените следующие теги. Вы можете задать им те же значения, которые вы использовали для Twitter:
     </p>
 
     <code>
@@ -270,9 +270,9 @@
     </code>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
